--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_NAME="Attendance Fingerprint"
+APP_NAME="Attendance Ultimate"
 APP_ENV=local
 APP_KEY=base64:QqOcawLFKazJtqszD7+7S3JDfoFZpb/RzbbtAI+rWh0=
 APP_DEBUG=true
